--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@
 }
 
 
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -19,4 +21,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App{
+  width : 1900px;
 }
